* Added Javadocs comments, fixed javadoc generation and publishing the jav with sources and javadocs, added unit tests and instructions on how to test. * Modified the build script to reduce the warnings on the command-line which always happen with Groovy.