@@ -33,6 +33,15 @@ afterEvaluate {
     ext.versionSuffix = (buildNum ? buildNum : (compName ? compName : ext.hostname))
 }
 
+tasks.withType(JavaCompile) {
+    options.warnings = false
+}
+
+application {
+    mainClass = project.mainClassName
+    applicationDefaultJvmArgs = ['-Xverify:none']
+}
+
 sourceSets {
     main {
         java { srcDirs = [] }
@@ -131,8 +140,4 @@ if (project.hasProperty("signing.keyId")) {
     signing {
         sign publishing.publications.mavenJava
     }
-}
-
-application {
-    mainClass = project.mainClassName
 }
